# Inter-Knot-Arena-VerifierApp

./: .gitignore  .gitmodules  CMakePresets.json  Directory.Build.props  README.md  VerifierApp.sln
contracts/: verifier-roster-import.schema.json
docs/: ARCHITECTURE.md
native/ika_native/: CMakeLists.txt
native/ika_native/include/: ika_native.h
native/ika_native/src/: ika_native.cpp
packaging/: VerifierApp.iss
scripts/: build.ps1  sign.ps1  smoke_live_ocr.ps1  smoke_worker.ps1  smoke_worker.py
src/VerifierApp.ApiClient/: InterKnotApiClient.cs  VerifierApp.ApiClient.csproj
src/VerifierApp.Auth/: DpapiTokenStore.cs  LoopbackCallbackServer.cs  PkceService.cs  VerifierApp.Auth.csproj
src/VerifierApp.Core/: VerifierApp.Core.csproj
src/VerifierApp.Core/Models/: AuthContracts.cs  MatchContracts.cs  ScanContracts.cs
src/VerifierApp.Core/Services/: Interfaces.cs  LiveLayoutProfiles.cs  LiveUiDetector.cs  MatchMonitorService.cs  RuntimeScreenCapturePlan.cs  ScanOrchestrator.cs  VerifierSignatureService.cs
src/VerifierApp.LiveScan/: Program.cs  VerifierApp.LiveScan.csproj  app.manifest
src/VerifierApp.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  VerifierApp.UI.csproj  app.manifest
src/VerifierApp.WorkerHost/: BundledAssetManager.cs  ElevationRelaunchHelper.cs  NamedPipeWorkerClient.cs  NativeBridge.cs  NativeLibraryBootstrap.cs  VerifierApp.WorkerHost.csproj  WorkerProcessLauncher.cs
tests/fixtures/bundled_smoke/: manifest.json
worker/: README.md  VerifierWorker.spec  detectors.py  main.py  requirements.txt
